--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+    <sonar.projectKey>berezovsky14_hello-world-war</sonar.projectKey>
+    <sonar.organization>berezovsky14</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.login>fe73a4bf085f369406bde38b6d50f64e4e962b29</sonar.login>
   </properties>
 
   <modules>
